# trino_concurrent_executor

./: .gitignore  go.mod  go.sum  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
go/: build.sh  build_ffi.py  go.mod  main.go  run.sh  use.py
output/: README.md  __init__.py  gopy_build__init__.py  pyproject.toml
output/trino_concurrent_executor/: README.md  setup.py
src/go/trino_concurrent_executor/: tools.go
src/go/trino_concurrent_executor/source/: tools.go
src/python/: gopy_build__init__.py
src/trino_concurrent_executor/go/source/: trino_concurrentexecutor.go
