[project]
name = "trino_concurrent_executor"
version = "0.1"
readme = "README.md"
authors = [{ name = "treaditup", email = "treaditup@gmail.com" }]
license = { text = "MIT" }
description = "GoPy example"
requires-python = ">=3.7"
dependencies = ["pybindgen>=0.22.1"]

[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src/python/"}

packages = ["trino_concurrent_executor"]

[tool.setuptools.package-data]
trino_concurrent_executor = ["*.so", "*.py"]

[project.scripts]
execute = "execute_query.main:main"
