[project]
name = "trino_concurrent_executor"
version = "0.1"
readme = "README.md"
authors = [{ name = "Calvin Woo", email = "wooxx074@gmail.com" }]
license = { text = "MIT" }
description = "GoPy example"
requires-python = ">=3.7"
dependencies = ["pybindgen>=0.22.1"]

[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Specify the root directory to search for packages
include = ["python.trino_concurrent_executor"]

[project.scripts]
execute = "execute_query.main:main"